# agent-language

./: .gitignore  README.md  adapter.ts  index.ts  package-lock.json  package.json  rollup.config.js
hc-dna/: Cargo.toml
hc-dna/workdir/: dna.yaml
hc-dna/zomes/agent_store/: Cargo.toml
hc-dna/zomes/agent_store/src/: lib.rs  utils.rs
hc-dna/zomes/agent_store_integrity/: Cargo.toml
hc-dna/zomes/agent_store_integrity/src/: lib.rs
hc-dna/zomes/tests/: index.ts  package-lock.json  package.json
